--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,8 @@
 <h1>{{title}} 🚀</h1>
 <p>Welcome Ironhacker!</p>
+<button>
+    <a href="auth/signup">Sign up!</a>
+</button>
+<button>
+    <a href="auth/login">Login</a>
+</button>
