--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,7 @@
+* {
+  padding: 0px;
+  margin: 0px;
+}
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -9,4 +13,17 @@ a {
 
 h1 {
   color: 15px;
+}
+
+.stage {
+  border: 1px solid #000;
+  border-radius: 4px;
+  padding: 16px;
+}
+
+.job {
+  background-color: blue;
+  border-radius: 4px;
+  padding: 8px;
+  color: #fff;
 }
