--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,6 +14,7 @@
       {{{body}}}
 
       <script src="/js/script.js"></script>
+      <script src="https://unpkg.com/tailwindcss-jit-cdn"></script>
    </body>
 
 </html>
