--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,11 +19,18 @@ h1 {
   border: 1px solid #000;
   border-radius: 4px;
   padding: 16px;
+  margin-right: 32px;
+  display: inline-block;
+  min-height: 600px;
 }
 
 .job {
-  background-color: blue;
+  background: linear-gradient(90deg, #4b6cb7 0%, #182848 100%);
   border-radius: 4px;
   padding: 8px;
   color: #fff;
+}
+
+div.scroll {
+  white-space: nowrap;
 }
