--- a/views/tracker/tracker.hbs
+++ b/views/tracker/tracker.hbs
@@ -3,10 +3,11 @@
 
 {{!-- EACH STAGE --}}
 
+<div class="scroll">
 {{#each stages}}
 <div class="stage">
-    <p>{{this.name}}</p>
-    <a href="">New job</a>
+    <span class="inline-block bg-green-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">{{this.name}}</span>   
+    <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow"><a href="/tracker/new/stageName/{{this.name}}">New job</a></button>
     {{#each this.jobs}}
             <div class="job">
                 <p>{{this.position}}</p>
@@ -17,4 +18,5 @@
 
 </div>
 {{/each}}
+</div>
 
