--- a/views/tracker/tracker.hbs
+++ b/views/tracker/tracker.hbs
@@ -1,19 +1,20 @@
-<h1> IronTracker © </h1>
+<h1 class="text-3xl"> IronTracker © </h1>
 
 
 {{!-- EACH STAGE --}}
 
 <div class="scroll">
 {{#each stages}}
-<div class="stage">
-    <span class="inline-block bg-green-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">{{this.name}}</span>   
-    <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow"><a href="/tracker/new/stageName/{{this.name}}">New job</a></button>
+<div class="stage {{this.name}}">
+    <span class="text-xs inline-block bg-green-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">{{this.name}}</span>   
+    <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-1 px-1 border border-gray-400 rounded shadow"><a href="/tracker/new/stageName/{{this.name}}">New job</a></button>
     {{#each this.jobs}}
-            <div class="job">
-                <p>{{this.position}}</p>
-                <p>{{this.companyName}}</p>
-                <a href="/tracker/stage/{{../this._id}}/job/{{this._id}}">See more</a>
-            </div>
+            <a href="/tracker/stage/{{../this._id}}/job/{{this._id}}">
+                <div class="job">
+                    <p class="text-base font-semibold">{{this.position}}</p>
+                    <p class="text-sm">{{this.companyName}}</p>                
+                </div>
+            </a>
 {{/each}}
 
 </div>
