Updated middleware again, should work now

--- a/views/tracker/sharedTracker.hbs
+++ b/views/tracker/sharedTracker.hbs
@@ -1,4 +1,4 @@
-<h1 class="text-3xl"> {{userName}} IronTracker © </h1>
+<h1 class="text-3xl"> IronTracker © </h1>
 
 <button><a href="/">Create your own job tracker now!</a></button>
 
