--- a/views/tracker/tracker.hbs
+++ b/views/tracker/tracker.hbs
@@ -1,5 +1,10 @@
-<h1 class="text-3xl"> {{userName}} IronTracker © </h1>
-<a target="_blank" href="tracker/shared/{{sharedId}}">Open public url</a>
+<div class="heyAndre">
+    <h1 class="left text-3xl"> {{userName}} IronTracker © </h1>
+    <br>
+    <a class="my-4 bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded" target="_blank" href="tracker/shared/{{sharedId}}">Open public url</a>
+    <br>
+</div>
+
 
 {{!-- EACH STAGE --}}
 
